fixes z-index for links

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -154,15 +154,21 @@ p.isoform-p {
 }
 
 .sidenav {
-  height: 100%;
-  width: 134px;
-  position: fixed;
-  z-index: 0;
-  top: 0;
-  left: 0;
-  background-color: #343a40;
-  overflow-x: hidden;
-  padding-top: 137px;
+    height: 100%;
+    width: 134px;
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    background-color: #343a40;
+    overflow-x: hidden;
+    padding-top: 137px;
+    display: none !important;
+}
+
+/* Desktop size */
+@media screen and (min-width:1400px) {
+  .sidenav { display: block!important; }
 }
 
 .sidenav a {
